--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><blockquote>
+        <div class="home">
+          <img src="home.jpg" alt="" srcset="">
+          <blockquote>
   <p>Hello World ! how is everything !</p>
 </blockquote>
 <h2 class="post-list-heading">Posts</h2>
